Paginated endpoint Configuracion
